added resultsReport.php which uses datatable to display all saved interview results, corrected the interview->tests hierarchy when logging details from cat-mh api, added debugging switch (->debug), corrected abbreviation ledger so config key can stay 'pdep' and api test type gets 'p-dep' for instance

--- a/config.json
+++ b/config.json
@@ -23,7 +23,11 @@
 
 	"links": {
 		"project": [
-
+			{
+				"name": "CAT-MH Interview Results Report",
+				"icon": "report",
+				"url": "resultsReport.php"
+			}
 		],
 		"control-center": [
 
