--- a/config.json
+++ b/config.json
@@ -101,7 +101,22 @@
 			{"type": "checkbox", "key": "ss", "name": "Suicide Scale"},
 			{"type": "checkbox", "key": "ss_show_results", "name": "Show Results"}
          ]
-      }
+        },
+		{
+			"key": "email-sender",
+			"name": "Sender address for automated interview invitations",
+			"type": "text"
+		},
+		{
+			"key": "email-subject",
+			"name": "Subject line for automated interview invitations",
+			"type": "text"
+		},
+		{
+			"key": "email-body",
+			"name": "Body text for automated interview invitations",
+			"type": "rich-text"
+		}
 	],
 
 	"system-settings": [
@@ -120,7 +135,7 @@
 	],
 
 	"crons": [
-
+		
 	],
 
 	"compatibility": {
