--- a/config.json
+++ b/config.json
@@ -151,11 +151,11 @@
 
 	"crons": [
 		{
-			"cron_name": "emailscheduler",
-			"cron_description": "Cron that runs every day to send automatic interview invites",
-			"method": "cronEmail",
-			"cron_frequency": "86400",
-			"cron_max_run_time": "300"
+			"cron_name": "CAT-MH Scheduled Sequence Invitation Emailer",
+			"cron_description": "Cron that runs every minute to send automatic interview invites",
+			"method": "cron_send_emails",
+			"cron_frequency": "60",
+			"cron_max_run_time": "3540"
 		}
 	],
 
