added alternate test label settings fix issue where emails had no links/urls for interviews

--- a/config.json
+++ b/config.json
@@ -105,26 +105,37 @@
             },
 			{"type": "checkbox", "key": "dep", "name": "Depression"},
 			{"type": "checkbox", "key": "dep_show_results", "name": "Show Results"},
+			{"type": "text", "key": "dep_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "mdd", "name": "Major Depressive Disorder"},
 			{"type": "checkbox", "key": "mdd_show_results", "name": "Show Results"},
+			{"type": "text", "key": "mdd_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "anx", "name": "Anxiety Disorder"},
 			{"type": "checkbox", "key": "anx_show_results", "name": "Show Results"},
+			{"type": "text", "key": "anx_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "mhm", "name": "Mania/Hypomania"},
 			{"type": "checkbox", "key": "mhm_show_results", "name": "Show Results"},
+			{"type": "text", "key": "mhm_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "pdep", "name": "Depression (Perinatal)"},
 			{"type": "checkbox", "key": "pdep_show_results", "name": "Show Results"},
+			{"type": "text", "key": "pdep_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "panx", "name": "Anxiety Disorder (Perinatal)"},
 			{"type": "checkbox", "key": "panx_show_results", "name": "Show Results"},
+			{"type": "text", "key": "panx_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "pmhm", "name": "Mania/Hypomania (Perinatal)"},
 			{"type": "checkbox", "key": "pmhm_show_results", "name": "Show Results"},
+			{"type": "text", "key": "pmhm_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "sa", "name": "Substance Abuse"},
 			{"type": "checkbox", "key": "sa_show_results", "name": "Show Results"},
+			{"type": "text", "key": "sa_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "ptsd", "name": "Post-Traumatic Stress Disorder"},
 			{"type": "checkbox", "key": "ptsd_show_results", "name": "Show Results"},
+			{"type": "text", "key": "ptsd_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "cssrs", "name": "C-SSRS Suicide Screen"},
 			{"type": "checkbox", "key": "cssrs_show_results", "name": "Show Results"},
+			{"type": "text", "key": "cssrs_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "ss", "name": "Suicide Scale"},
-			{"type": "checkbox", "key": "ss_show_results", "name": "Show Results"}
+			{"type": "checkbox", "key": "ss_show_results", "name": "Show Results"},
+			{"type": "text", "key": "ss_label", "name": "Alternate Label"}
          ]
         }
 	],
