update readme and config

--- a/config.json
+++ b/config.json
@@ -51,6 +51,11 @@
 
 	"project-settings": [
 		{
+			"key": "enroll_field",
+			"name": "Choose an Enrollment Date/Time field -- participants will start receiving interview invitations after enrollment",
+			"type": "field-list"
+		},
+		{
 			"key": "email-subject",
 			"name": "Subject line for automated interview invitations",
 			"type": "text"
