fixed substance use/abuse deprecation related issues

--- a/config.json
+++ b/config.json
@@ -176,9 +176,9 @@
 			{"type": "checkbox", "key": "pmhm", "name": "Mania/Hypomania (Perinatal)"},
 			{"type": "checkbox", "key": "pmhm_show_results", "name": "Show Results"},
 			{"type": "text", "key": "pmhm_label", "name": "Alternate Label"},
-			{"type": "checkbox", "key": "sa", "name": "Substance Abuse"},
-			{"type": "checkbox", "key": "sa_show_results", "name": "Show Results"},
-			{"type": "text", "key": "sa_label", "name": "Alternate Label"},
+			{"type": "checkbox", "key": "sud", "name": "Substance Use Disorder"},
+			{"type": "checkbox", "key": "sud_show_results", "name": "Show Results"},
+			{"type": "text", "key": "sud_label", "name": "Alternate Label"},
 			{"type": "checkbox", "key": "ptsd", "name": "Post-Traumatic Stress Disorder"},
 			{"type": "checkbox", "key": "ptsd_show_results", "name": "Show Results"},
 			{"type": "text", "key": "ptsd_label", "name": "Alternate Label"},
