--- a/config.json
+++ b/config.json
@@ -42,6 +42,11 @@
 				"name": "CAT-MH Interview Data Export",
 				"icon": "report",
 				"url": "export_interview_data.php"
+			},
+			{
+				"name": "CAT-MH Export and Delete Interviews",
+				"icon": "report",
+				"url": "export_and_delete_interviews.php"
 			}
 		],
 		"control-center": [
