Additional issues fixed for PHP8 compatability

--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
 
 	"authors": [
 		{
-			"name": "Carl Reed",
-			"email": "carl.w.reed@vumc.org",
+			"name": "Carl Reed, Kyle McGuffin",
+			"email": "datacore@vumc.org",
 			"institution": "Vanderbilt University Medical Center"
 		}
 	],
