Add API endpoint to fetch interview data for all records
Writing to field and performing core API export may result in truncated
data as redcap_data<N>'s value column is TEXT (64 KB) while interview
data is stored in the EM log in a column of type MEDIUMTEXT (16 MB)

--- a/config.json
+++ b/config.json
@@ -300,6 +300,12 @@
 		"redcap-version-min": "",
 		"redcap-version-max": ""
 	},
-	
-	"framework-version": 5
+	"framework-version": 5,
+		"include-authors-in-api-info": true,
+		"api-actions": {
+				"get-interview-data": {
+						"description": "Gets all interview data for each record",
+						"access": ["auth"]
+				}
+		}
 }
